# memagents

./: .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
asdrp/agent/: base.py  reductive_agent.py  simple_agent.py  summary_agent.py
asdrp/memory/: condensed_memory.py  proposition_extraction_memory.py
docs/: condensed_memory.md  proposition_extraction_memory.md  reductive_agent.md  summary_agent.md
notebooks/: Agentic Memory.ipynb  Multi-Turn Agent Conversations.ipynb
tests/agent/: test_reductive_agent.py  test_summary_agent.py
tests/memory/: test_condensed_memory.py  test_proposition_extraction_memory.py
